--- a/npcs/hobb_newton_jr.yaml
+++ b/npcs/hobb_newton_jr.yaml
@@ -516,4 +516,4 @@ npc:
     # No length limit for now.
     #
     personality: |
-      Short and stocky, ruggedly handsome wit blonde hair and blue eyes with standard farm type clothes
+      Short and stocky for a half-giant, ruggedly handsome wit blonde hair and blue eyes with standard farm type clothes
