--- a/npcs/hamza.yaml
+++ b/npcs/hamza.yaml
@@ -517,23 +517,23 @@ npc:
                rolled plus your Intelligence modifier (minimum reduction of 1), as you create a momentary shield of telekinetic force.
     - title: Psi-Powered Leap
     - content: When you make a high or long jump, you can roll your Psionic Talent die and extend the distance of the jump, up to a number of feet equal to twice the number rolled plus twice 
-               your Intelligence modifier (minimum of 1 extra foot). This extra distance costs you only 1 foot of movement. <br>
+               your Intelligence modifier (minimum of 1 extra foot). This extra distance costs you only 1 foot of movement.
                Telekinetic Strike - You can propel your attacks with telekinetic force. Once on each of your turns, immediately after you deal damage to a target within 30 feet of you with a weapon  attack, you 
-                                    can roll your Psionic Talent die and also deal force damage to the target equal to the number rolled. <br>
+                                    can roll your Psionic Talent die and also deal force damage to the target equal to the number rolled. 
                Changing the Die’s Size - If you roll the highest number on your Psionic Talent die, it decreases by one die size after the roll. This represents you burning through your psionic energy. For example,
                                          if the die is a d6 and you roll a 6, it becomes a d4. If it’s a d4 and you roll a 4, it becomes unusable until you finish a long rest. Conversely, if you roll a 1 on your Psionic
                                          Talent die, it increases by one die size after the roll, up to its starting size. This represents you conserving psionic energy for later use. For example, if you roll a 1 on a d4,
                                          the die then becomes a d6. Whenever you finish a long rest, your Psionic Talent die resets to its starting size. When you reach certain levels in this class, the starting 
-                                         size of your Psionic Talent die increases - at 5th level (d8), 11th level (d10), and 17th level (d12). <br>
-               Psi Replenishment - As a bonus action, you can calm your mind for a moment and restore your Psionic Talent die to its starting size. You then can’t use Psi Replenishment again until you finish a long rest.<br>
+                                         size of your Psionic Talent die increases - at 5th level (d8), 11th level (d10), and 17th level (d12). 
+               Psi Replenishment - As a bonus action, you can calm your mind for a moment and restore your Psionic Talent die to its starting size. You then can’t use Psi Replenishment again until you finish a long rest.
     - title: Telekinetic Adept
-    - content: You have mastered new ways to use your telekinesis <br>
+    - content: You have mastered new ways to use your telekinesis
                Psionic Thrust - When you deal damage to a target with the Telekinetic Strike of your Psionic Talent, you can force the target to make a Strength saving throw against a DC equal to 8 + your 
-                                proficiency bonus + your Intelligence modifier. Unless the save succeeds, you can knock the target prone or move it up to 10 feet in any direction horizontally. <br>
+                                proficiency bonus + your Intelligence modifier. Unless the save succeeds, you can knock the target prone or move it up to 10 feet in any direction horizontally.
                Telekinetic Movement - If your Psionic Talent die is available, you can move an object or a creature with your mind. As an action, you target one loose object that is Large or smaller or one willing 
                                       creature, other than yourself. If you can see the target and it is within 30 feet of you, you can move it up to 30 feet to an unoccupied space you can see. Alternatively, if it
                                       is a Tiny object, you can move it to or from your hand. Either way, you can move the target horizontally, vertically, or both. When you take this action, your Psionic Talent die 
-                                      decreases by one die size. <br>
+                                      decreases by one die size.
     - title: Psi-Enhanced Metabolism
     - content: The psionic energy flowing through you has bolstered your mind and body. You have resistance to poison and psychic damage, and you are immune to the poisoned condition.
     - title: Bulwark of Force
