--- a/npcs/hickle_frownbottom.yaml
+++ b/npcs/hickle_frownbottom.yaml
@@ -537,24 +537,24 @@ npc:
                feet of it and you expend a spell slot of 1st level or higher. The steel defender returns to life after 1 minute with all its hit points restored. At the end of a long rest, you can create a new steel 
                defender if you have smith's tools with you. If you already have a defender from this feature, the first one immediately perishes. The defender also perishes if you die. <br>  
                
-               Steel Defender - Medium construct<br>
-               Armor Class - 15 (natural armor)<br>
-               Stats - STR 14(+2) DEX 12(+1) CON 14(+2) INT 4(−3) WIS 10(+0) CHA 6(−2)<br> 
-               Hit Points - 2 + your Intelligence modifier + 5 times your artificer level (the defender has a number of Hit Dice [d8s] equal to your artificer level)<br>
-               Speed - 40 ft.<br>    
-               Saving Throws - Dex +1 plus PB, Con +2 plus PB<br>
-               Skills - Athletics +2 plus PB, Perception +0 plus PB x 2<br>
-               Damage Immunities - poison<br>
-               Condition Immunities - charmed, exhaustion, poisoned<br>
-               Senses - Darkvision 60 ft., Passive Perception 10 + (PB x 2)<br>
-               Languages - understands the languages you speak<br>
-               Challenge — <br>
-               Proficiency Bonus (PB) - equals your bonus<br>
-               Vigilant - The defender can't be surprised.<br>
-               Actions - <br>
-               Force-Empowered Rend. Melee Weapon Attack - your spell attack modifier to hit, reach 5 ft., one target you can see. Hit 1d8 + PB force damage.<br>
-               Repair - (3/Day). The magical mechanisms inside the defender restore 2d8 + PB hit points to itself or to one construct or object within 5 feet of it.<br>
-               Reactions - <br>
+               Steel Defender - Medium construct
+               Armor Class - 15 (natural armor)
+               Stats - STR 14(+2) DEX 12(+1) CON 14(+2) INT 4(−3) WIS 10(+0) CHA 6(−2)
+               Hit Points - 2 + your Intelligence modifier + 5 times your artificer level (the defender has a number of Hit Dice [d8s] equal to your artificer level)
+               Speed - 40 ft.   
+               Saving Throws - Dex +1 plus PB, Con +2 plus PB
+               Skills - Athletics +2 plus PB, Perception +0 plus PB x 2
+               Damage Immunities - poison
+               Condition Immunities - charmed, exhaustion, poisoned
+               Senses - Darkvision 60 ft., Passive Perception 10 + (PB x 2)
+               Languages - understands the languages you speak
+               Challenge — 
+               Proficiency Bonus (PB) - equals your bonus
+               Vigilant - The defender can't be surprised.
+               Actions - 
+               Force-Empowered Rend. Melee Weapon Attack - your spell attack modifier to hit, reach 5 ft., one target you can see. Hit 1d8 + PB force damage.
+               Repair - (3/Day). The magical mechanisms inside the defender restore 2d8 + PB hit points to itself or to one construct or object within 5 feet of it.
+               Reactions -
                Deflect Attack - The defender imposes disadvantage on the attack roll of one creature it can see that is within 5 feet of it, provided the attack roll is against a creature other than the defender.  
       
   - title: Attacks
