--- a/npcs/illianith_mizzruiel.yaml
+++ b/npcs/illianith_mizzruiel.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: young adult
+    age: Young Adult
 
     #
     # Races (case insensitive):
@@ -466,32 +466,69 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Dexterity
+    - Intelligence
+    - Charisma
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - Sleep Magic
+    resistances:
+    - Charmed
     skills:
-    - Elf Abilities:
-      - Fey Ancestry: Advantage on saving throws againts charm and immune to sleep magic
-        Trance: Elves don’t need to sleep. Instead, they meditate deeply, remaining semiconscious, for 4 hours a day. (The Common word for such meditation is “trance.”) While meditating, you can dream after a fashion; such
-                dreams are actually mental exercises that have become reflexive through years of practice. After Resting in this way, you gain the same benefit that a human does from 8 hours of sleep
-      Drow Abilities:
-      - Superior Darkvision: See 120 in like bright light in dim light and like dim light in darkness
-        Keen Senses: Proficiency in Perception
-        Sunlight Sensitivity: disadvantage on attack and perception roles in direct sunlight
-        Drow Magic: Can cast Dancing Lights, Faerie Fire, Darkness
-        Drow Weapons Training: Proficient with rapiers, shortswords and hand crossbow
-      Rogue Abilities:
-      - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
-        Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
-        Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
-      Assassin Abilities:
-      - Assassinate: You have advantage on attack rolls against any creature that hasn't taken a turn in the combat yet. In addition, any hit you score against a creature that is surprised is a critical hit
+    - Poison
+    proficiencies:
+    - Stealth
+    - Sleight-of-Hand
+    - Deception    
+    - Performance
+    - Thieve's Tools
+    - Poisoner's Kit
+    - Disguise Kit
+  special-abilities:
+  - title: Drow Abilities
+  - abilities: 
+    - title: Superior Darkvision 
+    - content: See 120 in like bright light in dim light and like dim light in darkness
+    - title: Keen Senses
+    - content: Proficiency in Perception
+    - title: Fey Ancestry
+    - content: Advantage on saving throws against charm and immune to sleep magic
+    - title: Trance
+    - content: Doesn't need to sleep, 4 hours meditation counts as a long rest
+    - title: Sunlight Sensitivity
+    - content: Disadvantage on attack and perception roles in direct sunlight
+    - title: Drow Magic
+    - content: Can cast Dancing Lights, Faerie Fire, Darkness
+    - title: Drow Weapons Training
+    - content: Proficient with rapiers, shortswords and hand crossbow
+  - title: Rogue Abilities
+  - abilities: 
+    - title: Expertise
+    - content: Double proficiency bonus with Thieve's Tools and Sleight of Hand
+    - title: Sneak Attack
+    - content: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
+    - title: Cunning Action
+    - content: Can take a bonus action on each turn to Hide, Disengage or Dash
+  - title: Assassin Abilities
+  - abilities: 
+    - title: Bonus Proficiencies
+    - content: When you choose this archetype at 3rd level, you gain proficiency with the disguise kit and the poisoner's kit.
+    - title: Assassinate
+    - content: You are at your deadliest when you get the drop on your enemies. You have advantage on attack rolls against any creature that hasn't taken a turn in the combat yet. In addition, any hit you score against a 
+               creature that is surprised is a critical hit.
+        
+  - title: Attacks
+  - content: 1 attack with her poison dagger or poison garrote
+  - title: Combat Tactics
+  - content: She will always attack by surprise and go for the immediate kill 
 
-    special-abilities:
-       Proficient in Sleaigh-of-Hand, Stealth, Disguise Kit and Poisoner's Kit        
-    attacks: |
-      1 attack with her poison dagger or poison garrote
-    combat-tactics: |
-      She will always attack by surprise and go for the immediate kill 
-    special-equipment:
-    - Dagger of Venom
+  - title: Special Equipment
+  - abilities:
+    - title: Dagger of Venom
+    - content: You gain a +1 bonus to Attack and Damage Rolls made with this Magic Weapon. You can use an action to cause thick, black poison to coat the blade. The poison remains for 1 minute or until an Attack using this 
+               weapon hits a creature. That creature must succeed on a DC 15 Constitution saving throw or take 2d10 poison damage and become Poisoned for 1 minute. The Dagger can't be used this way again until the next dawn.
 
   profile:
 
