--- a/npcs/illianith_mizzruiel.yaml
+++ b/npcs/illianith_mizzruiel.yaml
@@ -333,6 +333,7 @@ npc:
     #
     # Optional.  0 or more.
     #
+    factions:
     - id: assassin_s_guild
       name: Assassin's Guild
     - id: drow_clan
