--- a/npcs/jean_pierre_lacroix.yaml
+++ b/npcs/jean_pierre_lacroix.yaml
@@ -330,6 +330,7 @@ npc:
     #
     # Optional.  0 or more.
     #
+    factions:
     - id: a_thieve_s_assassin_s_guild
       name: A Thieve's/Assassin's Guild
     - id: restaurant_staff
